# scrap-native

./: LICENSE  README.md  index.html  package.json  snapcraft.yaml  tsconfig.json
src/: app.ts  main.ts  modules.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  project.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  swc_utils.rs  visitor.rs
src/blockly/: index.ts  types.ts
src/blockly/extensions/: for.ts
src/blockly/fields/: field_param.ts
src/blockly/plugins/: flyout.ts  index.ts  renderer.ts
src/code/: editor.ts
src/code/transformers/: blocks.ts  sb3.ts  typescript.ts  utils.ts
src/components/: entity.ts  media-list.scss  paint.scss  paint.ts  slider.scss  tabs.scss  workspace.ts
src/scss/: _globals.scss  app.scss  base.scss  parley.scss
src/utils/: nodes.d.ts  swc.ts
