[package]
name = "scrap-native"
version = "0.1.0"
description = "Scrap"
authors = ["Tomáš Wróbel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scrap_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_core = { version = "0.109.0", features = ["ecma_parser", "ecma_ast", "common", "ecma_visit", "ecma_ast_serde", "ecma_transforms", "ecma_transforms_typescript"] }
swc = "0.290.1"
anyhow = "1.0.89"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
